--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "graphql-react-event-booking",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.1.0",
+  "description": "Event-Scheduler using graphql and reactjs",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "",
+  "author": "Saadman Sakib",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
